ARROW-5085: [C++][Parquet][Python] Do not allow reading to dictionary type unless we have implemented support for it

This also adds a unit test exhibiting that the bug in ARROW-5085 has been fixed. I opened ARROW-6277 about expanding direct dictionary read support to other Parquet primitive types

Closes #5107 from wesm/ARROW-5085 and squashes the following commits:

63141b7bc <Wes McKinney> Do not allow reading to dictionary type unless we have implemented support for it

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>